Solved problem that occured when converting json to table ; got rid of ellipsis in lexicon results rendering

--- a/Chaining search.ipynb
+++ b/Chaining search.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 142,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-01-14T10:06:56.006660Z",
@@ -38,6 +38,9 @@
     "import xml.etree.ElementTree as ET\n",
     "import json\n",
     "AVAILABLE_CORPORA = ['chn', 'opensonar', 'zeebrieven', 'gysseling', 'nederlab']\n",
+    "\n",
+    "# Get rid of ellipsis in display (otherwise relevant data might not be shown)\n",
+    "pd.set_option('display.max_colwidth',1000)\n",
     "\n",
     "# Search methods\n",
     "\n",
@@ -57,7 +60,7 @@
     "        result_dict[query] = search_corpus(query,corpus)\n",
     "    return result_dict\n",
     "   \n",
-    "def search_lexicon(query,corpus):\n",
+    "def search_lexicon(query, corpus):\n",
     "    endpoint = \"http://172.16.4.56:8890/sparql\"\n",
     "    if (corpus==\"diamant\"):\n",
     "        endpoint = \"http://svprre02:8080/fuseki/tdb/sparql\"\n",
@@ -72,6 +75,7 @@
     "    \n",
     "    # make sure cells containing NULL are added too, otherwise we'll end up with ill-formed data\n",
     "    df = df.applymap(lambda x: '' if pd.isnull(x) else x[\"value\"])\n",
+    "    \n",
     "    return df\n",
     "\n",
     "# Processing methods\n",
@@ -138,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 143,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-01-14T10:06:56.836571Z",
@@ -209,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 144,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-01-14T10:06:57.833871Z",
@@ -657,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 134,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-01-11T16:27:20.972892Z",
@@ -669,7 +673,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8d266f7986984c4fb3c806e52750d731",
+       "model_id": "cd09993383ba4e6cb03414f6b3cce537",
        "version_major": 2,
        "version_minor": 0
       },
@@ -695,14 +699,267 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 147,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-01-11T16:27:21.266585Z",
      "start_time": "2019-01-11T16:27:20.974184Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Number</th>\n",
+       "      <th>hyphenation</th>\n",
+       "      <th>lemEntryId</th>\n",
+       "      <th>lemPos</th>\n",
+       "      <th>lemma</th>\n",
+       "      <th>wordform</th>\n",
+       "      <th>wordformId</th>\n",
+       "      <th>wordformPos</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>http://universaldependencies.org/u/feat/Gender.html#Masc</td>\n",
+       "      <td>http://universaldependencies.org/u/feat/Number.html#Plur</td>\n",
+       "      <td>gro/ten</td>\n",
+       "      <td>http://rdf.ivdnt.org/lexica/diamant/entry/molex/29607</td>\n",
+       "      <td>http://universaldependencies.org/u/pos/NOUN</td>\n",
+       "      <td>groot</td>\n",
+       "      <td>groten</td>\n",
+       "      <td>http://rdf.ivdnt.org/lexica/diamant/wordform/molex/131193</td>\n",
+       "      <td>http://universaldependencies.org/u/pos/NOUN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>http://universaldependencies.org/u/feat/Gender.html#Masc</td>\n",
+       "      <td>http://universaldependencies.org/u/feat/Number.html#Sing</td>\n",
+       "      <td>groot</td>\n",
+       "      <td>http://rdf.ivdnt.org/lexica/diamant/entry/molex/29607</td>\n",
+       "      <td>http://universaldependencies.org/u/pos/NOUN</td>\n",
+       "      <td>groot</td>\n",
+       "      <td>groot</td>\n",
+       "      <td>http://rdf.ivdnt.org/lexica/diamant/wordform/molex/99632</td>\n",
+       "      <td>http://universaldependencies.org/u/pos/NOUN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>gro/te/re</td>\n",
+       "      <td>http://rdf.ivdnt.org/lexica/diamant/entry/molex/29606</td>\n",
+       "      <td>http://universaldependencies.org/u/pos/ADJ</td>\n",
+       "      <td>groot</td>\n",
+       "      <td>grotere</td>\n",
+       "      <td>http://rdf.ivdnt.org/lexica/diamant/wordform/molex/108065</td>\n",
+       "      <td>http://universaldependencies.org/u/pos/ADJ</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>groot/ste</td>\n",
+       "      <td>http://rdf.ivdnt.org/lexica/diamant/entry/molex/29606</td>\n",
+       "      <td>http://universaldependencies.org/u/pos/ADJ</td>\n",
+       "      <td>groot</td>\n",
+       "      <td>grootste</td>\n",
+       "      <td>http://rdf.ivdnt.org/lexica/diamant/wordform/molex/141124</td>\n",
+       "      <td>http://universaldependencies.org/u/pos/ADJ</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>gro/ter</td>\n",
+       "      <td>http://rdf.ivdnt.org/lexica/diamant/entry/molex/29606</td>\n",
+       "      <td>http://universaldependencies.org/u/pos/ADJ</td>\n",
+       "      <td>groot</td>\n",
+       "      <td>groter</td>\n",
+       "      <td>http://rdf.ivdnt.org/lexica/diamant/wordform/molex/182423</td>\n",
+       "      <td>http://universaldependencies.org/u/pos/ADJ</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>grootst</td>\n",
+       "      <td>http://rdf.ivdnt.org/lexica/diamant/entry/molex/29606</td>\n",
+       "      <td>http://universaldependencies.org/u/pos/ADJ</td>\n",
+       "      <td>groot</td>\n",
+       "      <td>grootst</td>\n",
+       "      <td>http://rdf.ivdnt.org/lexica/diamant/wordform/molex/28226</td>\n",
+       "      <td>http://universaldependencies.org/u/pos/ADJ</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>groots</td>\n",
+       "      <td>http://rdf.ivdnt.org/lexica/diamant/entry/molex/29606</td>\n",
+       "      <td>http://universaldependencies.org/u/pos/ADJ</td>\n",
+       "      <td>groot</td>\n",
+       "      <td>groots</td>\n",
+       "      <td>http://rdf.ivdnt.org/lexica/diamant/wordform/molex/356749</td>\n",
+       "      <td>http://universaldependencies.org/u/pos/ADJ</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>gro/te</td>\n",
+       "      <td>http://rdf.ivdnt.org/lexica/diamant/entry/molex/29606</td>\n",
+       "      <td>http://universaldependencies.org/u/pos/ADJ</td>\n",
+       "      <td>groot</td>\n",
+       "      <td>grote</td>\n",
+       "      <td>http://rdf.ivdnt.org/lexica/diamant/wordform/molex/81126</td>\n",
+       "      <td>http://universaldependencies.org/u/pos/ADJ</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>groot</td>\n",
+       "      <td>http://rdf.ivdnt.org/lexica/diamant/entry/molex/29606</td>\n",
+       "      <td>http://universaldependencies.org/u/pos/ADJ</td>\n",
+       "      <td>groot</td>\n",
+       "      <td>groot</td>\n",
+       "      <td>http://rdf.ivdnt.org/lexica/diamant/wordform/molex/99633</td>\n",
+       "      <td>http://universaldependencies.org/u/pos/ADJ</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>groot</td>\n",
+       "      <td>http://rdf.ivdnt.org/lexica/diamant/entry/molex/29607</td>\n",
+       "      <td>http://universaldependencies.org/u/pos/NOUN</td>\n",
+       "      <td>groot</td>\n",
+       "      <td>groot</td>\n",
+       "      <td>http://rdf.ivdnt.org/lexica/diamant/wordform/molex/99632</td>\n",
+       "      <td>http://universaldependencies.org/u/pos/NOUN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>groot</td>\n",
+       "      <td>http://rdf.ivdnt.org/lexica/diamant/entry/molex/29606</td>\n",
+       "      <td>http://universaldependencies.org/u/pos/ADJ</td>\n",
+       "      <td>groot</td>\n",
+       "      <td>groot</td>\n",
+       "      <td>http://rdf.ivdnt.org/lexica/diamant/wordform/molex/99633</td>\n",
+       "      <td>http://universaldependencies.org/u/pos/ADJ</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                      Gender  \\\n",
+       "0   http://universaldependencies.org/u/feat/Gender.html#Masc   \n",
+       "1   http://universaldependencies.org/u/feat/Gender.html#Masc   \n",
+       "2                                                              \n",
+       "3                                                              \n",
+       "4                                                              \n",
+       "5                                                              \n",
+       "6                                                              \n",
+       "7                                                              \n",
+       "8                                                              \n",
+       "9                                                              \n",
+       "10                                                             \n",
+       "\n",
+       "                                                      Number hyphenation  \\\n",
+       "0   http://universaldependencies.org/u/feat/Number.html#Plur     gro/ten   \n",
+       "1   http://universaldependencies.org/u/feat/Number.html#Sing       groot   \n",
+       "2                                                              gro/te/re   \n",
+       "3                                                              groot/ste   \n",
+       "4                                                                gro/ter   \n",
+       "5                                                                grootst   \n",
+       "6                                                                 groots   \n",
+       "7                                                                 gro/te   \n",
+       "8                                                                  groot   \n",
+       "9                                                                  groot   \n",
+       "10                                                                 groot   \n",
+       "\n",
+       "                                               lemEntryId  \\\n",
+       "0   http://rdf.ivdnt.org/lexica/diamant/entry/molex/29607   \n",
+       "1   http://rdf.ivdnt.org/lexica/diamant/entry/molex/29607   \n",
+       "2   http://rdf.ivdnt.org/lexica/diamant/entry/molex/29606   \n",
+       "3   http://rdf.ivdnt.org/lexica/diamant/entry/molex/29606   \n",
+       "4   http://rdf.ivdnt.org/lexica/diamant/entry/molex/29606   \n",
+       "5   http://rdf.ivdnt.org/lexica/diamant/entry/molex/29606   \n",
+       "6   http://rdf.ivdnt.org/lexica/diamant/entry/molex/29606   \n",
+       "7   http://rdf.ivdnt.org/lexica/diamant/entry/molex/29606   \n",
+       "8   http://rdf.ivdnt.org/lexica/diamant/entry/molex/29606   \n",
+       "9   http://rdf.ivdnt.org/lexica/diamant/entry/molex/29607   \n",
+       "10  http://rdf.ivdnt.org/lexica/diamant/entry/molex/29606   \n",
+       "\n",
+       "                                         lemPos  lemma  wordform  \\\n",
+       "0   http://universaldependencies.org/u/pos/NOUN  groot    groten   \n",
+       "1   http://universaldependencies.org/u/pos/NOUN  groot     groot   \n",
+       "2    http://universaldependencies.org/u/pos/ADJ  groot   grotere   \n",
+       "3    http://universaldependencies.org/u/pos/ADJ  groot  grootste   \n",
+       "4    http://universaldependencies.org/u/pos/ADJ  groot    groter   \n",
+       "5    http://universaldependencies.org/u/pos/ADJ  groot   grootst   \n",
+       "6    http://universaldependencies.org/u/pos/ADJ  groot    groots   \n",
+       "7    http://universaldependencies.org/u/pos/ADJ  groot     grote   \n",
+       "8    http://universaldependencies.org/u/pos/ADJ  groot     groot   \n",
+       "9   http://universaldependencies.org/u/pos/NOUN  groot     groot   \n",
+       "10   http://universaldependencies.org/u/pos/ADJ  groot     groot   \n",
+       "\n",
+       "                                                   wordformId  \\\n",
+       "0   http://rdf.ivdnt.org/lexica/diamant/wordform/molex/131193   \n",
+       "1    http://rdf.ivdnt.org/lexica/diamant/wordform/molex/99632   \n",
+       "2   http://rdf.ivdnt.org/lexica/diamant/wordform/molex/108065   \n",
+       "3   http://rdf.ivdnt.org/lexica/diamant/wordform/molex/141124   \n",
+       "4   http://rdf.ivdnt.org/lexica/diamant/wordform/molex/182423   \n",
+       "5    http://rdf.ivdnt.org/lexica/diamant/wordform/molex/28226   \n",
+       "6   http://rdf.ivdnt.org/lexica/diamant/wordform/molex/356749   \n",
+       "7    http://rdf.ivdnt.org/lexica/diamant/wordform/molex/81126   \n",
+       "8    http://rdf.ivdnt.org/lexica/diamant/wordform/molex/99633   \n",
+       "9    http://rdf.ivdnt.org/lexica/diamant/wordform/molex/99632   \n",
+       "10   http://rdf.ivdnt.org/lexica/diamant/wordform/molex/99633   \n",
+       "\n",
+       "                                    wordformPos  \n",
+       "0   http://universaldependencies.org/u/pos/NOUN  \n",
+       "1   http://universaldependencies.org/u/pos/NOUN  \n",
+       "2    http://universaldependencies.org/u/pos/ADJ  \n",
+       "3    http://universaldependencies.org/u/pos/ADJ  \n",
+       "4    http://universaldependencies.org/u/pos/ADJ  \n",
+       "5    http://universaldependencies.org/u/pos/ADJ  \n",
+       "6    http://universaldependencies.org/u/pos/ADJ  \n",
+       "7    http://universaldependencies.org/u/pos/ADJ  \n",
+       "8    http://universaldependencies.org/u/pos/ADJ  \n",
+       "9   http://universaldependencies.org/u/pos/NOUN  \n",
+       "10   http://universaldependencies.org/u/pos/ADJ  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "#from chaininglib import queries, search\n",
     "\n",
@@ -712,18 +969,9 @@
     "query = lexicon_query(word=search_word, lexicon=lexicon)\n",
     "\n",
     "df_lexicon = search_lexicon(query, lexicon)\n",
-    "df_lexicon_relevant = [[]]\n",
-    "if (lexicon==\"diamant\"):\n",
-    "    df_lexicon_relevant = df_lexicon[[\"inputMode\", \"n_ontolex_writtenRep\", \"n_syndef_definitionText\", \"n_sensedef_definitionText\", \"wy_f_show\", \"wy_t_show\"]]\n",
-    "if (lexicon==\"molex\"):\n",
-    "    df_lexicon_relevant = df_lexicon[[\"lemEntryId\", \"lemma\", \"lemPos\", \"wordformId\", \"wordform\", \"hyphenation\", \"wordformPos\", \"Gender\", \"Number\"]]\n",
-    "if (lexicon==\"duelme\"):\n",
-    "    df_lexicon_relevant = df_lexicon[[\"exampleSentence\", \"lemma\", \"gender\", \"number\"]]\n",
-    "if (lexicon==\"celex\"):\n",
-    "    df_lexicon_relevant = df_lexicon[[\"lemmaId\", \"lemma\", \"wordformId\", \"wordform\", \"number\", \"gender\", \"subLemmata\"]]\n",
-    "if (lexicon==\"anw\"):\n",
-    "    df_lexicon_relevant = df_lexicon[[\"lemId\", \"lemma\", \"writtenForm\", \"definition\", \"definitionComplement\"]]\n",
-    "display(df_lexicon_relevant)"
+    "df_columns_list = list(df_lexicon.columns.values)\n",
+    "df_lexicon_in_columns = df_lexicon[df_columns_list]\n",
+    "display(df_lexicon_in_columns)"
    ]
   },
   {
