added paginated corpus search

--- a/Chaining search.ipynb
+++ b/Chaining search.ipynb
@@ -17,12 +17,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-01-16T16:42:06.788517Z",
      "start_time": "2019-01-16T16:42:06.541144Z"
-    }
+    },
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -34,6 +35,7 @@
     "import urllib\n",
     "from IPython.display import FileLink, FileLinks\n",
     "AVAILABLE_CORPORA = ['chn', 'opensonar', 'zeebrieven', 'gysseling', 'nederlab']\n",
+    "RECORDS_PER_PAGE = 1000\n",
     "\n",
     "# Get rid of ellipsis in display (otherwise relevant data might not be shown)\n",
     "pd.set_option('display.max_colwidth',1000)\n",
@@ -44,17 +46,23 @@
     "    query = r'[word=\".*\"]'\n",
     "    return search_corpus(query,corpus)\n",
     "\n",
-    "def search_corpus(query, corpus):\n",
+    "def search_corpus(query, corpus, start_position=1):\n",
     "    if corpus not in AVAILABLE_CORPORA:\n",
     "        raise ValueError(\"Unknown corpus: \" + corpus)\n",
     "    # Do request to federated content search corpora, so we get same output format for every corpus\n",
-    "    url = \"http://portal.clarin.inl.nl/fcscorpora/clariah-fcs-endpoints/sru?operation=searchRetrieve&queryType=fcs&maximumRecords=1000&x-fcs-context=\" + corpus + \"&query=\" + urllib.parse.quote(query)\n",
+    "    url = \"http://portal.clarin.inl.nl/fcscorpora/clariah-fcs-endpoints/sru?operation=searchRetrieve&queryType=fcs&maximumRecords=\" + str(RECORDS_PER_PAGE) + \"&startRecord=\" + str(start_position) + \"&x-fcs-context=\" + corpus + \"&query=\" + urllib.parse.quote(query)\n",
+    "    print(url)\n",
     "    response = requests.get(url)\n",
     "    response_text = response.text    \n",
-    "    df = parse_xml(response_text)\n",
+    "    df, next_page = parse_xml(response_text)\n",
+    "    # If there are next pages, call search_corpus recursively\n",
+    "    if next_page > 0:\n",
+    "        df_more = search_corpus(query,corpus, start_position=next_page)\n",
+    "        df = df.append(df_more, ignore_index=True)\n",
     "    # show message out of xml, if some error has occured (prevents empty output)\n",
     "    show_error_if_any(response_text)\n",
     "    return df\n",
+    "\n",
     "\n",
     "def search_corpus_multiple(queries, corpus):\n",
     "    result_dict = {}\n",
@@ -81,6 +89,8 @@
     "    df = pd.read_json(records_string, orient=\"records\")\n",
     "    \n",
     "    # make sure cells containing NULL are added too, otherwise we'll end up with ill-formed data\n",
+    "    # TODO: maybe this can be replaced by:\n",
+    "    # df = df.fillna('')\n",
     "    df = df.applymap(lambda x: '' if pd.isnull(x) else x[\"value\"])\n",
     "    \n",
     "    return df\n",
@@ -114,6 +124,10 @@
     "                result = dataView.find(\"{http://clarin.eu/fcs/dataview/hits}Result\")\n",
     "                left_context = result.text if result.text is not None else ''\n",
     "                hits = list(result)\n",
+    "                if len(hits)==0:\n",
+    "                    print([w for w in result.itertext()])\n",
+    "                    print(\"not hit in kwic, skip\")\n",
+    "                    continue\n",
     "                last_hit = hits[-1]\n",
     "                right_context = last_hit.tail if last_hit.tail is not None else ''\n",
     "                hit_words = [hit.text for hit in hits]\n",
@@ -124,7 +138,13 @@
     "                kwic = [left_context] + hit_words + [right_context]\n",
     "                records.append(kwic)\n",
     "    columns = [\"left context\"] + [\"word \" + str(n) for n in range(n_words_in_hit)] + [\"right context\"]\n",
-    "    return pd.DataFrame(records, columns = columns)\n",
+    "    \n",
+    "    next_pos = 0\n",
+    "    next_record_position = root.find(\"{http://docs.oasis-open.org/ns/search-ws/sruResponse}nextRecordPosition\")\n",
+    "    if (next_record_position is not None):\n",
+    "        next_pos = int(next_record_position.text)\n",
+    "        \n",
+    "    return pd.DataFrame(records, columns = columns), next_pos\n",
     "\n",
     "def show_error_if_any(text):\n",
     "    # get error message out of xml and print it on screen\n",
@@ -147,7 +167,7 @@
     "        df = results[query]\n",
     "        if not df.empty:\n",
     "            display(HTML('Resultaten voor <b>' + labels[n] + \"</b>:\"))\n",
-    "            display(df)"
+    "            display(df)\n"
    ]
   },
   {
@@ -159,12 +179,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-01-16T16:42:06.810560Z",
      "start_time": "2019-01-16T16:42:06.790502Z"
-    }
+    },
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -330,12 +351,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-01-16T16:42:06.826492Z",
      "start_time": "2019-01-16T16:42:06.812237Z"
     },
+    "collapsed": true,
     "hidden": true
    },
    "outputs": [],
@@ -689,7 +711,8 @@
     "ExecuteTime": {
      "end_time": "2019-01-16T16:42:06.847928Z",
      "start_time": "2019-01-16T16:42:06.828765Z"
-    }
+    },
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -713,7 +736,8 @@
     "ExecuteTime": {
      "end_time": "2019-01-16T16:42:07.402740Z",
      "start_time": "2019-01-16T16:42:06.849675Z"
-    }
+    },
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -753,6 +777,7 @@
      "end_time": "2019-01-16T16:42:07.420257Z",
      "start_time": "2019-01-16T16:42:07.404330Z"
     },
+    "collapsed": true,
     "hidden": true,
     "scrolled": true
    },
@@ -779,6 +804,7 @@
      "end_time": "2019-01-16T16:42:07.805919Z",
      "start_time": "2019-01-16T16:42:07.421680Z"
     },
+    "collapsed": true,
     "hidden": true
    },
    "outputs": [],
@@ -815,6 +841,7 @@
      "end_time": "2019-01-16T16:42:08.692517Z",
      "start_time": "2019-01-16T16:42:07.809209Z"
     },
+    "collapsed": true,
     "hidden": true
    },
    "outputs": [],
@@ -859,7 +886,8 @@
     "ExecuteTime": {
      "end_time": "2019-01-16T16:42:18.713352Z",
      "start_time": "2019-01-16T16:42:08.694085Z"
-    }
+    },
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -904,16 +932,97 @@
     "ExecuteTime": {
      "end_time": "2019-01-16T16:42:24.722526Z",
      "start_time": "2019-01-16T16:42:18.714869Z"
-    }
+    },
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "http://portal.clarin.inl.nl/fcscorpora/clariah-fcs-endpoints/sru?operation=searchRetrieve&queryType=fcs&maximumRecords=1000&startRecord=1&x-fcs-context=gysseling&query=%5Bword%3D%22.%2A%22%5D\n",
+      "http://portal.clarin.inl.nl/fcscorpora/clariah-fcs-endpoints/sru?operation=searchRetrieve&queryType=fcs&maximumRecords=1000&startRecord=1001&x-fcs-context=gysseling&query=%5Bword%3D%22.%2A%22%5D\n",
+      "http://portal.clarin.inl.nl/fcscorpora/clariah-fcs-endpoints/sru?operation=searchRetrieve&queryType=fcs&maximumRecords=1000&startRecord=2001&x-fcs-context=gysseling&query=%5Bword%3D%22.%2A%22%5D\n",
+      "http://portal.clarin.inl.nl/fcscorpora/clariah-fcs-endpoints/sru?operation=searchRetrieve&queryType=fcs&maximumRecords=1000&startRecord=3001&x-fcs-context=gysseling&query=%5Bword%3D%22.%2A%22%5D\n",
+      "http://portal.clarin.inl.nl/fcscorpora/clariah-fcs-endpoints/sru?operation=searchRetrieve&queryType=fcs&maximumRecords=1000&startRecord=4001&x-fcs-context=gysseling&query=%5Bword%3D%22.%2A%22%5D\n",
+      "['frustra terre. ad i pant']\n",
+      "not hit in kwic, skip\n",
+      "http://portal.clarin.inl.nl/fcscorpora/clariah-fcs-endpoints/sru?operation=searchRetrieve&queryType=fcs&maximumRecords=1000&startRecord=5001&x-fcs-context=gysseling&query=%5Bword%3D%22.%2A%22%5D\n",
+      "['Anno Dominj Millesimo. Ducentesimo. Tricesimo.']\n",
+      "not hit in kwic, skip\n",
+      "['int jaer ons heeren. dusentech. tweehondert dertech.']\n",
+      "not hit in kwic, skip\n",
+      "http://portal.clarin.inl.nl/fcscorpora/clariah-fcs-endpoints/sru?operation=searchRetrieve&queryType=fcs&maximumRecords=1000&startRecord=6001&x-fcs-context=gysseling&query=%5Bword%3D%22.%2A%22%5D\n",
+      "http://portal.clarin.inl.nl/fcscorpora/clariah-fcs-endpoints/sru?operation=searchRetrieve&queryType=fcs&maximumRecords=1000&startRecord=7001&x-fcs-context=gysseling&query=%5Bword%3D%22.%2A%22%5D\n",
+      "http://portal.clarin.inl.nl/fcscorpora/clariah-fcs-endpoints/sru?operation=searchRetrieve&queryType=fcs&maximumRecords=1000&startRecord=8001&x-fcs-context=gysseling&query=%5Bword%3D%22.%2A%22%5D\n",
+      "http://portal.clarin.inl.nl/fcscorpora/clariah-fcs-endpoints/sru?operation=searchRetrieve&queryType=fcs&maximumRecords=1000&startRecord=9001&x-fcs-context=gysseling&query=%5Bword%3D%22.%2A%22%5D\n",
+      "['dat mote war sin amen.']\n",
+      "not hit in kwic, skip\n",
+      "http://portal.clarin.inl.nl/fcscorpora/clariah-fcs-endpoints/sru?operation=searchRetrieve&queryType=fcs&maximumRecords=1000&startRecord=10001&x-fcs-context=gysseling&query=%5Bword%3D%22.%2A%22%5D\n",
+      "http://portal.clarin.inl.nl/fcscorpora/clariah-fcs-endpoints/sru?operation=searchRetrieve&queryType=fcs&maximumRecords=1000&startRecord=11001&x-fcs-context=gysseling&query=%5Bword%3D%22.%2A%22%5D\n",
+      "http://portal.clarin.inl.nl/fcscorpora/clariah-fcs-endpoints/sru?operation=searchRetrieve&queryType=fcs&maximumRecords=1000&startRecord=12001&x-fcs-context=gysseling&query=%5Bword%3D%22.%2A%22%5D\n",
+      "http://portal.clarin.inl.nl/fcscorpora/clariah-fcs-endpoints/sru?operation=searchRetrieve&queryType=fcs&maximumRecords=1000&startRecord=13001&x-fcs-context=gysseling&query=%5Bword%3D%22.%2A%22%5D\n",
+      "http://portal.clarin.inl.nl/fcscorpora/clariah-fcs-endpoints/sru?operation=searchRetrieve&queryType=fcs&maximumRecords=1000&startRecord=14001&x-fcs-context=gysseling&query=%5Bword%3D%22.%2A%22%5D\n",
+      "['quite dar hi ouer suor.']\n",
+      "not hit in kwic, skip\n",
+      "['Saterdaech vore palme zondach te Risele']\n",
+      "not hit in kwic, skip\n",
+      "[\"cc'ho xl'ho ix'ho in maio\"]\n",
+      "not hit in kwic, skip\n",
+      "['ecclesiam et schulthetum sancti Bauonis.']\n",
+      "not hit in kwic, skip\n",
+      "http://portal.clarin.inl.nl/fcscorpora/clariah-fcs-endpoints/sru?operation=searchRetrieve&queryType=fcs&maximumRecords=1000&startRecord=15001&x-fcs-context=gysseling&query=%5Bword%3D%22.%2A%22%5D\n",
+      "http://portal.clarin.inl.nl/fcscorpora/clariah-fcs-endpoints/sru?operation=searchRetrieve&queryType=fcs&maximumRecords=1000&startRecord=16001&x-fcs-context=gysseling&query=%5Bword%3D%22.%2A%22%5D\n",
+      "['Baues besegelt met haren Segelen.']\n",
+      "not hit in kwic, skip\n",
+      "http://portal.clarin.inl.nl/fcscorpora/clariah-fcs-endpoints/sru?operation=searchRetrieve&queryType=fcs&maximumRecords=1000&startRecord=17001&x-fcs-context=gysseling&query=%5Bword%3D%22.%2A%22%5D\n",
+      "['baues besegelt met haren Segelen.']\n",
+      "not hit in kwic, skip\n",
+      "[\"l'ho ij'ho in mense aprilis\"]\n",
+      "not hit in kwic, skip\n",
+      "['tercio Dominica post carnipriuium proxima.']\n",
+      "not hit in kwic, skip\n",
+      "http://portal.clarin.inl.nl/fcscorpora/clariah-fcs-endpoints/sru?operation=searchRetrieve&queryType=fcs&maximumRecords=1000&startRecord=18001&x-fcs-context=gysseling&query=%5Bword%3D%22.%2A%22%5D\n",
+      "http://portal.clarin.inl.nl/fcscorpora/clariah-fcs-endpoints/sru?operation=searchRetrieve&queryType=fcs&maximumRecords=1000&startRecord=19001&x-fcs-context=gysseling&query=%5Bword%3D%22.%2A%22%5D\n",
+      "http://portal.clarin.inl.nl/fcscorpora/clariah-fcs-endpoints/sru?operation=searchRetrieve&queryType=fcs&maximumRecords=1000&startRecord=20001&x-fcs-context=gysseling&query=%5Bword%3D%22.%2A%22%5D\n",
+      "http://portal.clarin.inl.nl/fcscorpora/clariah-fcs-endpoints/sru?operation=searchRetrieve&queryType=fcs&maximumRecords=1000&startRecord=21001&x-fcs-context=gysseling&query=%5Bword%3D%22.%2A%22%5D\n",
+      "['dusentechste iaer. ende tve hondertechste. ende drie ende vichtechste. ende tvelefste indictie.']\n",
+      "not hit in kwic, skip\n",
+      "http://portal.clarin.inl.nl/fcscorpora/clariah-fcs-endpoints/sru?operation=searchRetrieve&queryType=fcs&maximumRecords=1000&startRecord=22001&x-fcs-context=gysseling&query=%5Bword%3D%22.%2A%22%5D\n",
+      "['te hulpen der bruederscap -----']\n",
+      "not hit in kwic, skip\n",
+      "http://portal.clarin.inl.nl/fcscorpora/clariah-fcs-endpoints/sru?operation=searchRetrieve&queryType=fcs&maximumRecords=1000&startRecord=23001&x-fcs-context=gysseling&query=%5Bword%3D%22.%2A%22%5D\n",
+      "http://portal.clarin.inl.nl/fcscorpora/clariah-fcs-endpoints/sru?operation=searchRetrieve&queryType=fcs&maximumRecords=1000&startRecord=24001&x-fcs-context=gysseling&query=%5Bword%3D%22.%2A%22%5D\n",
+      "['thomas dach apostel in december']\n",
+      "not hit in kwic, skip\n",
+      "[\".M'ho, CC'ho, Quinquagesimo -- Septimo\"]\n",
+      "not hit in kwic, skip\n",
+      "http://portal.clarin.inl.nl/fcscorpora/clariah-fcs-endpoints/sru?operation=searchRetrieve&queryType=fcs&maximumRecords=1000&startRecord=25001&x-fcs-context=gysseling&query=%5Bword%3D%22.%2A%22%5D\n",
+      "['soude men wel moghen wl comen']\n",
+      "not hit in kwic, skip\n",
+      "http://portal.clarin.inl.nl/fcscorpora/clariah-fcs-endpoints/sru?operation=searchRetrieve&queryType=fcs&maximumRecords=1000&startRecord=26001&x-fcs-context=gysseling&query=%5Bword%3D%22.%2A%22%5D\n",
+      "['na sainte mathis dach .m.cc.lix.']\n",
+      "not hit in kwic, skip\n",
+      "[\"cc'ho. lx'ho. ad natale dominj.\"]\n",
+      "not hit in kwic, skip\n",
+      "http://portal.clarin.inl.nl/fcscorpora/clariah-fcs-endpoints/sru?operation=searchRetrieve&queryType=fcs&maximumRecords=1000&startRecord=27001&x-fcs-context=gysseling&query=%5Bword%3D%22.%2A%22%5D\n",
+      "http://portal.clarin.inl.nl/fcscorpora/clariah-fcs-endpoints/sru?operation=searchRetrieve&queryType=fcs&maximumRecords=1000&startRecord=28001&x-fcs-context=gysseling&query=%5Bword%3D%22.%2A%22%5D\n",
+      "http://portal.clarin.inl.nl/fcscorpora/clariah-fcs-endpoints/sru?operation=searchRetrieve&queryType=fcs&maximumRecords=1000&startRecord=29001&x-fcs-context=gysseling&query=%5Bword%3D%22.%2A%22%5D\n",
+      "http://portal.clarin.inl.nl/fcscorpora/clariah-fcs-endpoints/sru?operation=searchRetrieve&queryType=fcs&maximumRecords=1000&startRecord=30001&x-fcs-context=gysseling&query=%5Bword%3D%22.%2A%22%5D\n",
+      "http://portal.clarin.inl.nl/fcscorpora/clariah-fcs-endpoints/sru?operation=searchRetrieve&queryType=fcs&maximumRecords=1000&startRecord=31001&x-fcs-context=gysseling&query=%5Bword%3D%22.%2A%22%5D\n",
+      "http://portal.clarin.inl.nl/fcscorpora/clariah-fcs-endpoints/sru?operation=searchRetrieve&queryType=fcs&maximumRecords=1000&startRecord=32001&x-fcs-context=gysseling&query=%5Bword%3D%22.%2A%22%5D\n",
+      "http://portal.clarin.inl.nl/fcscorpora/clariah-fcs-endpoints/sru?operation=searchRetrieve&queryType=fcs&maximumRecords=1000&startRecord=33001&x-fcs-context=gysseling&query=%5Bword%3D%22.%2A%22%5D\n",
+      "http://portal.clarin.inl.nl/fcscorpora/clariah-fcs-endpoints/sru?operation=searchRetrieve&queryType=fcs&maximumRecords=1000&startRecord=34001&x-fcs-context=gysseling&query=%5Bword%3D%22.%2A%22%5D\n"
+     ]
+    }
+   ],
    "source": [
     "# Query lexicon to give list of all words\n",
     "lexicon=\"anw\"\n",
-    "df_lexicon = search_lexicon_allwords(lexicon)\n",
+    "#df_lexicon = search_lexicon_allwords(lexicon)\n",
     "## TODO: Why do double words appear?\n",
-    "lexicon_set = set([w.lower() for w in df_lexicon[\"writtenForm\"]])\n",
-    "display(lexicon_set)\n",
+    "#lexicon_set = set([w.lower() for w in df_lexicon[\"writtenForm\"]])\n",
+    "#display(lexicon_set)\n",
     "\n",
     "df_corpus = search_corpus_allwords(\"gysseling\")\n",
     "display(df_corpus)\n",
@@ -940,7 +1049,8 @@
     "ExecuteTime": {
      "end_time": "2019-01-16T16:42:36.088787Z",
      "start_time": "2019-01-16T16:42:24.724312Z"
-    }
+    },
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -974,14 +1084,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
@@ -1002,7 +1116,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
